RESOLVED FIXED74760
<option><span><option> doesn't parse correctly
https://bugs.webkit.org/show_bug.cgi?id=74760
Summary <option><span><option> doesn't parse correctly
Adam Barth
Reported 2011-12-16 15:21:47 PST
<option><span><option> doesn't parse correctly
Attachments
Patch (2.80 KB, patch)
2011-12-16 15:26 PST, Adam Barth
no flags
Patch for landing (3.53 KB, patch)
2011-12-16 15:33 PST, Adam Barth
no flags
Adam Barth
Comment 1 2011-12-16 15:26:42 PST
Eric Seidel (no email)
Comment 2 2011-12-16 15:27:19 PST
Comment on attachment 119688 [details] Patch LGTM.
Adam Barth
Comment 3 2011-12-16 15:33:04 PST
Created attachment 119689 [details] Patch for landing
WebKit Review Bot
Comment 4 2011-12-16 17:19:54 PST
Comment on attachment 119689 [details] Patch for landing Clearing flags on attachment: 119689 Committed r103133: <http://trac.webkit.org/changeset/103133>
Note You need to log in before you can comment on or make changes to this bug.