<option><span><option> doesn't parse correctly https://bugs.webkit.org/show_bug.cgi?id=74760

Reviewed by Eric Seidel.

Source/WebCore:

The <option> start tag shouldn't be quite as aggressive in closing open
<option> tags.  I'm not sure whether this was a change in the spec or a
mistranscription, but this patch causes us to match the spec.  I've
checked the other optionTag checks, and they all seem to be correct.

* html/parser/HTMLTreeBuilder.cpp:

LayoutTests:

Show test progression.

* html5lib/runner-expected.txt:


Canonical link: https://commits.webkit.org/91497@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103133 268f45cc-cd09-0410-ab3c-d52691b4dbfc